--- a/combinatorSelectors.css
+++ b/combinatorSelectors.css
@@ -1,15 +1,15 @@
-/* div p{
+div p{
     color: aqua;
-} */
+} 
 
-/* div > p{
+ div > p{
 background-color: blueviolet;
-} */
+} 
 
-/* div + h2{
+ div + h2{
     color: yellowgreen;
-} */
+} 
 
-/* div ~ h2{
+ div ~ h2{
     color: yellowgreen;
-} */
+} 
